--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -7,15 +7,18 @@
     -moz-background-size: cover;
     -o-background-size: cover;
   
-    height: 110vh;
+    height: 93vh;
     width: 100vw;
     max-width: 100vw;
 
     padding-top: 10vh;
-    /* overflow: scroll; */
+    padding-bottom: 10vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     
     color: white;
 }
+
 
 .icon-size{
     font-size: 4em;
