--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -7,9 +7,15 @@
     -o-background-size: cover;
     
     height: 100vh;
+    width: 100vw;
     max-width: 100vw;
 
     padding-top: 164px;
+    overflow-y: auto;
 
     color: white;
+}
+
+#seneca-card{
+    color: black;
 }
