--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -7,12 +7,14 @@
     -moz-background-size: cover;
     -o-background-size: cover;
   
-    height: 93vh;
+    height: 100vh;
     width: 100vw;
     max-width: 100vw;
 
-    padding-top: 10vh;
+    /* margin-top: 50px; */
+    padding-top: 164px;
     padding-bottom: 10vh;
+
     overflow-y: auto;
     overflow-x: hidden;
     
@@ -23,10 +25,3 @@
 .icon-size{
     font-size: 4em;
 }
-/* .text_bg{
-   font: bold 24px/45px Helvetica, Sans-Serif; 
-   letter-spacing: -1px;  
-   background: rgb(0, 0, 0);
-   background: rgba(0, 0, 0, 0.7);
-   padding: 10px; 
-} */
