--- a/src/components/styles/Common.css
+++ b/src/components/styles/Common.css
@@ -6,3 +6,17 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+.bg-image{
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.5);
+    background-size:cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
+    height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
+
+    color: white;
+}
