--- a/src/components/styles/Experience.css
+++ b/src/components/styles/Experience.css
@@ -1,3 +1,68 @@
 #exp-main{
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.5);
+    background-image: url(../../pictures/nc_sunrise.png);
+    background-size:cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  
+    height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
+
+    /* margin-top: 50px; */
+    padding-top: 164px;
+    padding-bottom: 10vh;
+
+    overflow-y: auto;
+    overflow-x: hidden;
     
+    color: white;
+}
+
+
+/* FIGURE THIS OUT */
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #fff;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 4px;
+    height: 100%;
+    z-index: 400;
+}
+.ul-li-child {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+
+.ul-li-child::before{
+    content: ' ';
+    background: #ddd;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+
+.tasks{
+    text-align: left;
+}
+
+.company-logo{
+    padding: 10px 10px 10px 10px;
+}
+
+.logo-container{
+    width: 150px;
+    height: 150px;
 }
