--- a/src/components/styles/Experience.css
+++ b/src/components/styles/Experience.css
@@ -59,10 +59,13 @@ ul.timeline:before {
 }
 
 .company-logo{
-    padding: 10px 10px 10px 10px;
+    /* padding: 10px 10px 10px 10px; */
 }
 
 .logo-container{
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
+
+    margin: 10px 10px 10px 10px;
+    /* padding: 10px; */
 }
