--- a/src/components/styles/Experience.css
+++ b/src/components/styles/Experience.css
@@ -6,7 +6,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
   
-    height: 100vh;
+    height:fit-content;
     width: 100vw;
     max-width: 100vw;
 
