--- a/src/components/styles/Experience.css
+++ b/src/components/styles/Experience.css
@@ -1,4 +1,4 @@
-#exp-main{
+#experience{
     box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.5);
     background-image: url(../../pictures/nc_sunrise.png);
     background-size:cover;
