--- a/src/components/styles/Hackathons.css
+++ b/src/components/styles/Hackathons.css
@@ -1,6 +1,10 @@
-#education{
+#hackathons{
     box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.5);
-    background-image: url(../../pictures/seneca.jpeg);
+    background-image: url(../../pictures/htvbg.jpeg);
+    
+    background-position-x: center;
+    background-position-y: 60%;
+
     background-size:cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -11,11 +15,17 @@
     max-width: 100vw;
 
     padding-top: 164px;
-    overflow-y: auto;
 
     color: white;
 }
 
-#seneca-card{
-    color: black;
+.hack-icon-col{
+    height: 125px;
+    width: 125px;
+
+    margin: 10px;
+}
+
+.hack-icon{
+    width: 100%;
 }
