--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -1,13 +1,13 @@
-#about-me{
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.5);
+#about-me {
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
     background-image: url(../../pictures/painting_bg.png);
-    background-size:cover;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-  
+
     /*OR 100vh here*/
-    height: fit-content; 
+    height: fit-content;
     width: 100vw;
     max-width: 100vw;
 
@@ -17,16 +17,18 @@
 
     overflow-y: auto;
     overflow-x: hidden;
-    
+
     color: white;
 }
 
 
-.icon-size{
+.icon-size {
     font-size: 3.3em;
+    margin-right: 10px;
 }
 
-#icons-row>*{
+#icons-row>* {
+    margin-bottom: 20px;
     padding-left: 0px;
     padding-right: 0px;
 }
