--- a/src/components/styles/AboutMe.css
+++ b/src/components/styles/AboutMe.css
@@ -11,9 +11,11 @@
     width: 100vw;
     max-width: 100vw;
 
-    padding-top: 164px;
+    padding-top: 132px;
     /*AND 10vh here*/
     padding-bottom: 310px;
+    padding-left: 20%;
+    padding-right: 25%;
 
     overflow-y: auto;
     overflow-x: hidden;
@@ -21,6 +23,13 @@
     color: white;
 }
 
+.about-me-header{
+    text-align: left;
+}
+
+.about-me-text{
+    text-align: left;
+}
 
 .icon-size {
     font-size: 3.3em;
@@ -31,4 +40,35 @@
     margin-bottom: 20px;
     padding-left: 0px;
     padding-right: 0px;
+}
+
+.transparent-blueish-background {
+    background-color: rgba(56,65,87,0.5);
+    max-width:fit-content;
+    border-radius: 10px;
+    padding-top: 2rem;
+    padding-bottom: 2.5rem;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.transparent-icon-bg {
+    background: linear-gradient(
+        180deg,
+        rgba(56, 65, 87, 0.7) 0%,    /* 50% transparency */
+        rgba(9, 9, 121, 0.7) 17%,    /* 50% transparency */
+        rgba(90, 35, 38, 0.7) 40%    /* 50% transparency */
+    );
+    max-width: fit-content;
+    border-radius: 10px;
+}
+
+.icons-container {
+    padding-top: 2rem;
+    margin: 0px auto;
+    padding: 10px;
+}
+
+.rounded-circle {
+    /* padding: 10px; */
 }
